force-app/main/default/objects/Current_Funding__c/Current_Funding__c.object-meta.xml
<CustomObject>
    <label>Current Funding</label>
    <nameField>
        <label>Current Funding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Current Funding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>