force-app/main/default/objects/Current_Funding__c/fields/Awards_from_Other_Organisations__c.field-meta.xml
<CustomField>
    <fullName>Awards_from_Other_Organisations__c</fullName>
    <inlineHelpText>List all non-CRUK and DBT current and pending research applications/awards held by the lead applicants and any co-investigators</inlineHelpText>
    <label>Awards from Other Organisations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>