force-app/main/default/objects/Current_Funding__c/fields/Explain_how_this_application_will_fit__c.field-meta.xml
<CustomField>
    <fullName>Explain_how_this_application_will_fit__c</fullName>
    <inlineHelpText>please briefly explain how this application will fit with any current awards from CRUK or DBT that you hold (to be filled out by Lead Applicants)</inlineHelpText>
    <label>Explain how this application will fit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>