force-app/main/default/objects/Current_Funding__c/fields/Funding_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Funding_Scheme__c</fullName>
    <label>Funding Scheme</label>
    <length>80</length>
    <type>Text</type>
</CustomField>