force-app/main/default/objects/Current_Funding__c/fields/Research_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Research_Project_Title__c</fullName>
    <label>Research Project Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>