force-app/main/default/objects/Current_Funding__c/recordTypes/Current_CRUK_Support_as_Joint_Lead_Applicant_or_Co_Investigator.recordType-meta.xml
<RecordType>
    <fullName>Current_CRUK_Support_as_Joint_Lead_Applicant_or_Co_Investigator</fullName>
    <active>true</active>
    <label>Current CRUK Support (as Joint Lead Applicant or Co-Investigator)</label>
</RecordType>