force-app/main/default/objects/Current_Funding__c/recordTypes/Current_CRUK_Support_as_Lead_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Current_CRUK_Support_as_Lead_Applicant</fullName>
    <active>true</active>
    <label>Current CRUK Support (as Lead Applicant)</label>
</RecordType>